# ffmpeg_trip

./: .gitignore  README.md
day1/: CMakeLists.txt  main.cpp  make.sh  modern_ffmpeg_01.cpp
day2/: CMakeLists.txt  main.cpp  tutorial02.cpp
day3/: CMakeLists.txt  main.cpp  tutorial03.c  tutorial03.cpp
opengl/: test_gl  test_gl.cpp
